--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "identity-obj-proxy",
   "version": "1.0.0",
   "description": "an identity object using ES6 proxies",
-  "main": "build/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "clean": "rimraf build",
-    "lint": "eslint src test",
-    "test": "NODE_ENV=test mocha --harmony-proxies",
-    "test:watch": "npm test -- --watch",
-    "build:babel": "babel src --out-dir build",
-    "build": "npm run clean && npm run lint && npm test && npm run build:babel",
-    "postinstall": "npm run build"
+    "lint": "eslint src",
+    "test": "node --harmony_proxies node_modules/.bin/jest",
+    "coverage": "node --harmony_proxies node_modules/.bin/jest --coverage",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
+    "prepublish": "npm run lint && npm run test"
   },
   "engines": {
     "node": ">=0.11"
@@ -33,19 +31,19 @@
   },
   "homepage": "https://github.com/keyanzhang/identity-obj-proxy#readme",
   "dependencies": {
-    "harmony-reflect": "^1.4.2"
+    "harmony-reflect": "^1.4.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.26",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-preset-es2015": "^6.3.13",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.1",
-    "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-react": "^3.13.0",
-    "expect": "^1.13.4",
-    "mocha": "^2.3.4",
-    "rimraf": "^2.5.0"
+    "coveralls": "^2.11.9",
+    "eslint": "^2.11.0",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "jest": "^12.1.1"
+  },
+  "jest": {
+    "automock": false,
+    "testPathDirs": [
+      "<rootDir>/src"
+    ]
   }
 }
