--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "harmony-reflect": "^1.4.6"
   },
   "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-jest": "^14.1.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "coveralls": "^2.11.9",
     "eslint": "^2.11.0",
     "eslint-config-airbnb-base": "^3.0.1",
